--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -857,7 +857,7 @@
 
                 <br/>
                 3. p115 게시판
-                <div class="tbl_card_list">
+                <div class="tbl_card_list type_01">
                     <!-- 테이블 상단정보 -->
                     <div class="card_info">
                         <div class="public_box">
