--- a/portal/html/layout.html
+++ b/portal/html/layout.html
@@ -33,18 +33,34 @@
             <nav id="nav">
                 <ul>
                     <li>
-                        <a href="">벤처투자매칭</a>
+                        <a href="javascript:void(0);">벤처투자매칭</a>
                         <ul>
                             <li><a href="./USR-1020-F-LIST.html">투자자 검색</a></li>
                             <li><a href="./html/USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
                             <li><a href="./html/USR-1030-B-LIST.html">기업홍보</a></li>
                             <li><a href="./html/USR-1040-F-DASH.html">통합공시</a></li>
-                            <li><a href="./html/USR-1051-H-CONTN.html">벤처투자마트</a></li>
-                            <li><a href="./html/USR-1061-H-CONTN.html">주식유통정보</a></li>
+                            <li>
+                                <a href="./html/USR-1051-H-CONTN.html">벤처투자마트</a>
+                                <ul>
+                                    <li><a href="./html/USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
+                                    <li><a href="./html/USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
+                                    <li><a href="./html/USR-1056-F-LIST.html">신청 정보 확인</a></li>
+                                    <li><a href="./html/USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
+                                    <li><a href="./html/USR-1053-B-LIST.html">FAQ</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="./html/USR-1061-H-CONTN.html">주식유통정보</a>
+                                <ul>
+                                    <li><a href="./html/USR-1061-H-CONTN.html">VC구주유통망</a></li>
+                                    <li><a href="./html/USR-1062-H-CONTN.html">구주거래정보망</a></li>
+                                    <li><a href="./html/USR-1063-H-CONTN.html">M&A 거래정보망</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="">투자가이드</a>
+                        <a href="javascript:void(0);">투자가이드</a>
                         <ul>
                             <li><a href="./html/USR-1110-H-CONTN.html">가이드 A to Z</a></li>
                             <li><a href="./html/USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
@@ -55,24 +71,57 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="">정보서비스</a>
+                        <a href="javascript:void(0);">정보서비스</a>
                         <ul>
                             <li><a href="./html/USR-1211-H-CONTN.html">정책</a></li>
                             <li><a href="./html/USR-1213-H-CONTN.html">법령</a></li>
-                            <li><a href="./html/USR-1220-F-DASH.html">통계</a></li>
-                            <li><a href="./html/USR-1231-B-LIST.html">자료실</a></li>
-                            <li><a href="./html/USR-1241-F-LIST.html">구인구직</a></li>
-                            <li><a href="./html/USR-12511-H-CONTN.html">업무처리지원</a></li>
+                            <li>
+                                <a href="./html/USR-1220-F-DASH.html">통계</a>
+                                <ul>
+                                    <li><a href="./html/USR-1220-F-DASH.html">대시보드</a></li>
+                                    <li><a href="./html/USR-1221-F-DTL.html">투자실적</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="./html/USR-1231-B-LIST.html">자료실</a>
+                                <ul>
+                                    <li><a href="./html/USR-1231-B-LIST.html">보고서</a></li>
+                                    <li><a href="./html/USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
+                                    <li><a href="./html/USR-1234-B-LIST.html">발행물</a></li>
+                                    <li><a href="./html/USR-1235-B-LIST.html">서식</a></li>
+                                    <li><a href="./html/USR-1236-H-CONTN.html">프로그램</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="./html/USR-1241-F-LIST.html">구인구직</a>
+                                <ul>
+                                    <li><a href="./html/USR-1241-F-LIST.html">채용공고</a></li>
+                                    <li><a href="./html/USR-1242-F-LIST.html">인력Pool</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="./html/USR-1251-H-CONTN.html">업무처리지원</a>
+                                <ul>
+                                    <li><a href="./html/USR-1251-H-CONTN.html">VC 경력 확인</a></li>
+                                    <li><a href="./html/USR-1242-F-LIST.html">신청내역확인</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="">벤처투자포털</a>
+                        <a href="javascript:void(0);">벤처투자포털</a>
                         <ul>
                             <li><a href="./html/USR-1310-H-CONTN.html">포털소개</a></li>
                             <li><a href="./html/USR-1320-B-LIST.html">공지사항</a></li>
                             <li><a href="./html/USR-1330-F-LIST.html">커뮤니티</a></li>
                             <li><a href="./html/USR-1341-F-LIST.html">벤처투자 TALK</a></li>
-                            <li><a href="./html/USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a></li>
+                            <li>
+                                <a href="./html/USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a>
+                                <ul>
+                                    <li><a href="./html/USR-1350-F-FORM.html">부당행위 신고</a></li>
+                                    <li><a href="./html/USR-1350-F-LIST.html">신고내역확인</a></li>
+                                </ul>
+                            </li>
                             <li><a href="./html/USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
@@ -125,8 +174,24 @@
                         <li><a href="./html/USR-1010-F-LIST.html">투자유치 희망기업 검색</a></li>
                         <li><a href="./html/USR-1030-B-LIST.html">기업홍보</a></li>
                         <li><a href="./html/USR-1040-F-DASH.html">통합공시</a></li>
-                        <li><a href="./html/USR-1051-H-CONTN.html">벤처투자마트</a></li>
-                        <li><a href="./html/USR-1061-H-CONTN.html">주식유통정보</a></li>
+                        <li class="depth3">
+                            <a href="javascript:void(0);">벤처투자마트</a>
+                            <ul>
+                                <li><a href="./html/USR-1051-H-CONTN.html">벤처투자마트란?</a></li>
+                                <li><a href="./html/USR-1054-F-FORM.html">벤처투자마트 신청</a></li>
+                                <li><a href="./html/USR-1056-F-LIST.html">신청 정보 확인</a></li>
+                                <li><a href="./html/USR-1052-B-LIST.html">벤처투자마트 공지</a></li>
+                                <li><a href="./html/USR-1053-B-LIST.html">FAQ</a></li>
+                            </ul>
+                        </li>
+                        <li class="depth3">
+                            <a href="javascript:void(0);">주식유통정보</a>
+                            <ul>
+                                <li><a href="./html/USR-1061-H-CONTN.html">VC구주유통망</a></li>
+                                <li><a href="./html/USR-1062-H-CONTN.html">구주거래정보망</a></li>
+                                <li><a href="./html/USR-1063-H-CONTN.html">M&A 거래정보망</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -145,10 +210,37 @@
                     <ul>
                         <li><a href="./html/USR-1211-H-CONTN.html">정책</a></li>
                         <li><a href="./html/USR-1213-H-CONTN.html">법령</a></li>
-                        <li><a href="./html/USR-1220-F-DASH.html">통계</a></li>
-                        <li><a href="./html/USR-1231-B-LIST.html">자료실</a></li>
-                        <li><a href="./html/USR-1241-F-LIST.html">구인구직</a></li>
-                        <li><a href="./html/USR-12511-H-CONTN.html">업무처리지원</a></li>
+                        <li class="depth3">
+                            <a href="javascript:void(0);">통계</a>
+                            <ul>
+                                <li><a href="./html/USR-1220-F-DASH.html">대시보드</a></li>
+                                <li><a href="./html/USR-1221-F-DTL.html">투자실적</a></li>
+                            </ul>
+                        </li>
+                        <li class="depth3">
+                            <a href="javascript:void(0);">자료실</a>
+                            <ul>
+                                <li><a href="./html/USR-1231-B-LIST.html">보고서</a></li>
+                                <li><a href="./html/USR-1232-B-LIST.html">뉴스레터 웹진</a></li>
+                                <li><a href="./html/USR-1234-B-LIST.html">발행물</a></li>
+                                <li><a href="./html/USR-1235-B-LIST.html">서식</a></li>
+                                <li><a href="./html/USR-1236-H-CONTN.html">프로그램</a></li>
+                            </ul>
+                        </li>
+                        <li class="depth3">
+                            <a href="javascript:void(0);">구인구직</a>
+                            <ul>
+                                <li><a href="./html/USR-1241-F-LIST.html">채용공고</a></li>
+                                <li><a href="./html/USR-1242-F-LIST.html">인력Pool</a></li>
+                            </ul>
+                        </li>
+                        <li class="depth3">
+                            <a href="javascript:void(0);l">업무처리지원</a>
+                            <ul>
+                                <li><a href="./html/USR-1251-H-CONTN.html">VC 경력 확인</a></li>
+                                <li><a href="./html/USR-1242-F-LIST.html">신청내역확인</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -158,7 +250,13 @@
                         <li><a href="./html/USR-1320-B-LIST.html">공지사항</a></li>
                         <li><a href="./html/USR-1330-F-LIST.html">커뮤니티</a></li>
                         <li><a href="./html/USR-1341-F-LIST.html">벤처투자 TALK</a></li>
-                        <li><a href="./html/USR-1350-F-FORM.html">벤처투자 부당행위 신고센터</a></li>
+                        <li class="depth3">
+                            <a href="javascript:void(0);">벤처투자 부당행위 신고센터</a>
+                            <ul>
+                                <li><a href="./html/USR-1350-F-FORM.html">부당행위 신고</a></li>
+                                <li><a href="./html/USR-1350-F-LIST.html">신고내역확인</a></li>
+                            </ul>
+                        </li>
                         <li><a href="./html/USR-1361-H-CONTN.html">유관기관 안내</a></li>
                     </ul>
                 </li>
@@ -203,6 +301,14 @@
                             <li><a href="">벤처투자포털</a></li>
                             <li><a href="">벤처투자포털</a></li>
                             <li><a href="">벤처투자포털</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0);">공지사항</a>
+                        <ul>
+                            <li><a href="">공지사항</a></li>
+                            <li><a href="">공지사항</a></li>
+                            <li><a href="">공지사항</a></li>
                         </ul>
                     </li>
                     <li class="selected">
