--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -275,11 +275,11 @@
     <!-- 바로가기 버튼 -->
     <div class="main_quickmenu">
         <ul>
-            <li data-menuanchor="sec1" class="active"><a href="#sec1">Section1</a></li>
-            <li data-menuanchor="sec2"><a href="#sec2">Section2</a></li>
-            <li data-menuanchor="sec3"><a href="#sec3">Section3</a></li>
-            <li data-menuanchor="sec4"><a href="#sec4">Section4</a></li>
-            <li data-menuanchor="sec5"><a href="#sec5">Section5</a></li>
+            <li data-menuanchor="sec1" class="active"><a href="#sec1">바로가기</a></li>
+            <li data-menuanchor="sec2"><a href="#sec2">통합검색</a></li>
+            <li data-menuanchor="sec3"><a href="#sec3">현황/통계</a></li>
+            <li data-menuanchor="sec4"><a href="#sec4">알림/소통</a></li>
+            <li data-menuanchor="sec5"><a href="#sec5">전자공시</a></li>
         </ul>
         <button class="mymenu"><span></span>마이메뉴</button>
     </div>
@@ -321,46 +321,48 @@
                                     </li>
                                 </ul>
                                 <div class="shortcuts_box">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>포털소개</strong>
-                                                <em>벤처투자포털을 소개합니다.</em>
-                                            </a>
+                                    <div class="shortcuts_box_content">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>포털소개</strong>
+                                                    <em>벤처투자포털을 소개합니다.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>커뮤니티</strong>
+                                                    <em>벤처기업, 투자자모임에서 <br/>직접 소통해보세요.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>교육서비스</strong>
+                                                    <em>더 자세한 벤처투자에 대해 <br/>알아보세요.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>벤처투자 불법신고</strong>
+                                                    <em>벤처투자와 관련된 불법 사항을 <br/>신고해주세요.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>구인구직</strong>
+                                                    <em>채용정보와 인력풀을 <br/>이용해보세요.</em>
+                                                </a>
+                                            </div>
                                         </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>커뮤니티</strong>
-                                                <em>벤처기업, 투자자모임에서<br/>직접 소통해보세요.</em>
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>교육서비스</strong>
-                                                <em>더 자세한 벤처투자에 대해<br/>알아보세요.</em>
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>벤처투자 불법신고</strong>
-                                                <em>벤처투자와 관련된 불법 사항을<br/>신고해주세요.</em>
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>구인구직</strong>
-                                                <em>채용정보와 인력풀을<br/>이용해보세요.</em>
-                                            </a>
-                                        </div>
+                                        <button class="swiper-button-prev shortcuts"></button>
+                                        <button class="swiper-button-next shortcuts"></button>
+                                        <div class="swiper-pagination shortcuts"></div>
                                     </div>
-                                    <button class="swiper-button-prev"></button>
-                                    <button class="swiper-button-next"></button>
-                                    <div class="swiper-pagination"></div>
                                 </div>
                             </div>
                         </div>
@@ -391,39 +393,41 @@
                                     </li>
                                 </ul>
                                 <div class="shortcuts_box">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>벤처기업검색</strong>
-                                                <em>투자유치를 희망하는 벤처기업을<br/>찾아보세요</em>
-                                            </a>
+                                    <div class="shortcuts_box_content">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>벤처기업검색</strong>
+                                                    <em>투자유치를 희망하는 벤처기업을 <br/>찾아보세요</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>동향보고서</strong>
+                                                    <em>최신 벤처투자 트렌드를 <br/>확인하세요.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>온라인IR</strong>
+                                                    <em>벤처기업의 경영실적을 <br/>확인합니다.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>VC구주유통망</strong>
+                                                    <em>벤처투자자산 매매거래를 위한 <br/>플랫폼입니다.</em>
+                                                </a>
+                                            </div>
                                         </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>동향보고서</strong>
-                                                <em>최신 벤처투자 트렌드를<br/>확인하세요.</em>
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>온라인IR</strong>
-                                                <em>벤처기업의 경영실적을<br/>확인합니다.</em>
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>VC구주유통망</strong>
-                                                <em>벤처투자자산 매매거래를 위한<br/>플랫폼입니다.</em>
-                                            </a>
-                                        </div>
+                                        <button class="swiper-button-prev shortcuts"></button>
+                                        <button class="swiper-button-next shortcuts"></button>
+                                        <div class="swiper-pagination shortcuts"></div>
                                     </div>
-                                    <button class="swiper-button-prev"></button>
-                                    <button class="swiper-button-next"></button>
-                                    <div class="swiper-pagination"></div>
                                 </div>
                             </div>
                         </div>
@@ -468,39 +472,41 @@
                                     </li>
                                 </ul>
                                 <div class="shortcuts_box">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>투자자 검색</strong>
-                                                <em>분야별 투자기관을 찾아보세요.</em>
-                                            </a>
+                                    <div class="shortcuts_box_content">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>투자자 검색</strong>
+                                                    <em>분야별 투자기관을 찾아보세요.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>벤처투자마트</strong>
+                                                    <em>투자자-기업간 상담회입니다.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>가이드 A to Z</strong>
+                                                    <em>벤처투자를 위한 모든 정보를 <br/>담았습니다.</em>
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a href="">
+                                                    <span></span>
+                                                    <strong>용어사전</strong>
+                                                    <em>벤처투자와 관련된 용어를 <br/>검색합니다.</em>
+                                                </a>
+                                            </div>
                                         </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>벤처투자마트</strong>
-                                                <em>투자자-기업간 상담회입니다.</em>
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>가이드 A to Z</strong>
-                                                <em>벤처투자를 위한 모든 정보를<br/>담았습니다.</em>
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a href="">
-                                                <span></span>
-                                                <strong>용어사전</strong>
-                                                <em>벤처투자와 관련된 용어를<br/>검색합니다.</em>
-                                            </a>
-                                        </div>
+                                        <button class="swiper-button-prev shortcuts"></button>
+                                        <button class="swiper-button-next shortcuts"></button>
+                                        <div class="swiper-pagination shortcuts"></div>
                                     </div>
-                                    <button class="swiper-button-prev"></button>
-                                    <button class="swiper-button-next"></button>
-                                    <div class="swiper-pagination"></div>
                                 </div>
                             </div>
                         </div>
