테이블게시판 작업

--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -575,14 +575,34 @@
                 </div>
                 <div class="tab_group">
                     <ul>
-                        <li class="on"><a href="" rel="tab_content_04">탭버튼</a></li>
-                        <li><a href="" rel="tab_content_05">탭버튼</a></li>
-                        <li><a href="" rel="tab_content_06">탭버튼</a></li>
+                        <li class="on"><a href="" rel="tab_content_01">커뮤니티 홈</a></li>
+                        <li><a href="" rel="tab_content_02">공지사항</a></li>
+                        <li><a href="" rel="tab_content_03">자유게시판</a></li>
+                        <li><a href="" rel="tab_content_04">일정알림</a></li>
+                        <li><a href="" rel="tab_content_05">회원</a></li>
                     </ul>
                     <div class="tab_content">
-                        <div class="on tab_content_04">내용1</div>
-                        <div class="tab_content_05">내용2</div>
-                        <div class="tab_content_06">내용3</div>
+
+                        <!-- 첫번째 탭 -->
+                        <div class="on tab_content_01">내용1</div>
+                        <!-- //첫번째 탭 -->
+
+                        <!-- 두번째 탭 -->
+                        <div class="tab_content_02">내용2</div>
+                        <!-- //두번째 탭 -->
+
+                        <!-- 세번째 탭 -->
+                        <div class="tab_content_03">내용3</div>
+                        <!-- //세번째 탭 -->
+
+                        <!-- 네번째 탭 -->
+                        <div class="tab_content_04">내용4</div>
+                        <!-- //네번째 탭 -->
+
+                        <!-- 다섯번째 탭 -->
+                        <div class="tab_content_05">내용5</div>
+                        <!-- //다섯번째 탭 -->
+
                     </div>
                 </div>
             </dd>
@@ -909,7 +929,7 @@
                                 미래에 더 성장하는 기업이 되길 기원합니다.
                                 <span>2022-10-00 00:00:00</span>
                             </a>
-                            <button>설정</button>
+                            <button class="pop_mini">설정</button>
                             <!-- 수정/삭제 -->
                             <div class="card_set">
                                 <ul>
@@ -924,7 +944,7 @@
                                 미래에 더 성장하는 기업이 되길 기원합니다.
                                 <span>2022-10-00 00:00:00</span>
                             </a>
-                            <button>설정</button>
+                            <button class="pop_mini">설정</button>
                             <!-- 수정/삭제 -->
                             <div class="card_set">
                                 <ul>
@@ -939,7 +959,7 @@
                                 미래에 더 성장하는 기업이 되길 기원합니다.
                                 <span>2022-10-00 00:00:00</span>
                             </a>
-                            <button>설정</button>
+                            <button class="pop_mini">설정</button>
                             <!-- 수정/삭제 -->
                             <div class="card_set">
                                 <ul>
@@ -954,7 +974,7 @@
                                 미래에 더 성장하는 기업이 되길 기원합니다.
                                 <span>2022-10-00 00:00:00</span>
                             </a>
-                            <button>설정</button>
+                            <button class="pop_mini">설정</button>
                             <!-- 수정/삭제 -->
                             <div class="card_set">
                                 <ul>
@@ -969,7 +989,7 @@
                                 미래에 더 성장하는 기업이 되길 기원합니다.
                                 <span>2022-10-00 00:00:00</span>
                             </a>
-                            <button>설정</button>
+                            <button class="pop_mini">설정</button>
                             <!-- 수정/삭제 -->
                             <div class="card_set">
                                 <ul>
@@ -984,7 +1004,7 @@
                                 미래에 더 성장하는 기업이 되길 기원합니다.
                                 <span>2022-10-00 00:00:00</span>
                             </a>
-                            <button>설정</button>
+                            <button class="pop_mini">설정</button>
                             <!-- 수정/삭제 -->
                             <div class="card_set">
                                 <ul>
