--- a/pub_list.html
+++ b/pub_list.html
@@ -189,28 +189,28 @@
                     division: '',
                     depth1:'기업 홍보',
                     path:'./portal/html/USR-1030-B-LIST.html',
-                    date:'',
+                    date:'2022-08-26',
                     mdate:'2022-09-19',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 목록]'
                 },
                 {
                     division: '',
                     depth1:'기업 홍보 - 상세',
                     path:'./portal/html/USR-1030-B-DTL.html',
-                    date:'',
+                    date:'2022-08-26',
                     mdate:'2022-09-19',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
                     depth1:'기업 홍보 - 등록/수정',
                     path:'./portal/html/USR-1030-B-FORM.html',
-                    date:'',
+                    date:'2022-08-26',
                     mdate:'2022-09-19',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 등록수정]'
                 },
                 {
                     division: '',
@@ -361,7 +361,7 @@
                 {
                     division: '',
                     depth1:'용어사전(TAB)',
-                    path:'./portal/html/USR-02-05-B-LIST.html',
+                    path:'./portal/html/USR-1150-B-LIST.html',
                     date:'',
                     mdate:'2022-09-26',
                     con:'작업중',
