--- a/portal/html/USR-1020-F-DTL.html
+++ b/portal/html/USR-1020-F-DTL.html
@@ -65,7 +65,7 @@
                             <li><a href="./html/USR-1110-H-CONTN.html">가이드 A to Z</a></li>
                             <li><a href="./html/USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
                             <li><a href="./html/USR-02-04-B-LIST.html">FAQ</a></li>
-                            <li><a href="./html/USR-02-05-B-LIST.html">용어사전</a></li>
+                            <li><a href="./html/USR-1150-B-LIST.html">용어사전</a></li>
                             <li><a href="./html/USR-1161-H-CONTN.html">교육</a></li>
                             <li><a href="./html/USR-1162-B-LIST.html">벤처투자상담</a></li>
                         </ul>
@@ -200,7 +200,7 @@
                         <li><a href="./html/USR-1110-H-CONTN.html">가이드 A to Z</a></li>
                         <li><a href="./html/USR-02-02-F-LIST.html">맞춤투자 가이드</a></li>
                         <li><a href="./html/USR-02-04-B-LIST.html">FAQ</a></li>
-                        <li><a href="./html/USR-02-05-B-LIST.html">용어사전</a></li>
+                        <li><a href="./html/USR-1150-B-LIST.html">용어사전</a></li>
                         <li><a href="./html/USR-1161-H-CONTN.html">교육</a></li>
                         <li><a href="./html/USR-1162-B-LIST.html">벤처투자상담</a></li>
                     </ul>
