게시판 업데이트

--- a/pub_list.html
+++ b/pub_list.html
@@ -279,27 +279,27 @@
                     division: '',
                     depth1:'벤처투자마트 - 공지',
                     path:'./portal/html/USR-1052-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 목록]'
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 - 공지 상세',
                     path:'./portal/html/USR-1052-B-DTL.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 - FAQ',
                     path:'./portal/html/USR-1053-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-29',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
@@ -353,28 +353,28 @@
                     division: '',
                     depth1:'FAQ(TAB)',
                     path:'./portal/html/USR-02-04-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-27',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입 - FAQ]'
                 },
                 {
                     division: '',
                     depth1:'용어사전(TAB)',
                     path:'./portal/html/USR-1150-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'작업중',
-                    etc:'[1차디자인]'
+                    con:'완료',
+                    etc:'[1차디자인] [게시판 타입2 - 목록]'
                 },
                 {
                     division: '',
                     depth1:'용어사전 - 상세',
                     path:'./portal/html/USR-1150-B-DTL.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-30',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입2 - 상세]'
                 },
                 {
                     division: '',
@@ -392,7 +392,7 @@
                     date:'',
                     mdate:'2022-10-11',
                     con:'작업중',
-                    etc:''
+                    etc:'0829아직디자인안옴'
                 },
                 {
                     division: '',
@@ -454,19 +454,19 @@
                     division: '',
                     depth1:'자료실 - 보고서',
                     path:'./portal/html/USR-1231-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-13',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 목록]'
                 },
                 {
                     division: '',
                     depth1:'자료실 - 보고서 상세',
                     path:'./portal/html/USR-1231-B-DTL.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-13',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
@@ -481,28 +481,28 @@
                     division: '',
                     depth1:'자료실 - 발행물',
                     path:'./portal/html/USR-1234-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-21',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 목록]'
                 },
                 {
                     division: '',
                     depth1:'자료실 - 서식',
                     path:'./portal/html/USR-1235-B-LIST.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 목록]'
                 },
                 {
                     division: '',
                     depth1:'자료실 - 서식 상세',
                     path:'./portal/html/USR-1235-B-DTL.html',
-                    date:'',
+                    date:'2022-08-29',
                     mdate:'2022-09-26',
-                    con:'작업중',
-                    etc:''
+                    con:'완료',
+                    etc:'[게시판 타입1 - 상세]'
                 },
                 {
                     division: '',
